<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            style="@style/font_h6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/enter_vin"
            android:textColor="@color/colorBlack" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/enter_vin"
                style="@style/font_subtitle_2"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="#00000000"
                android:focusable="true"
                android:inputType="text"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:minWidth="100dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textAllCaps="true"
                android:textColorHint="@color/colorWhite1"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            style="@style/font_button"
            android:id="@+id/ok_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginRight="4dp"
            android:background="@color/colorPrimary"
            android:text="@string/logout_ok"
            android:textColor="@color/colorWhite"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/cancel_button"
            style="@style/font_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:background="@color/colorWhite2"
            android:text="@string/logout_cancel"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</LinearLayout>
