<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorWhite"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:contentInsetStart="0dp">

            <TextView
                android:id="@+id/app_bar_title"
                style="@style/font_subtitle_1"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/image_upload"
                android:textColor="@color/colorPrimary" />

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Order  ID: " />

                <TextView
                    android:id="@+id/dispatchID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="11080"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/image_layout"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/image_upload_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/please_select_one_image"
                    android:gravity="center"
                    android:padding="16dp"
                    android:background="@color/colorWhite2"
                    android:layout_marginBottom="24dp"/>

                <LinearLayout
                    android:id="@+id/selected_image_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:layout_marginBottom="20dp">

                        <ImageButton
                            android:id="@+id/remove_image"
                            android:layout_gravity="right"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/ic_new_close"/>
                    </LinearLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:id="@+id/preview_image"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="32dp">

                <Button
                    android:id="@+id/uploadBtn"
                    style="@style/font_button"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@color/colorWhite"
                    android:text="@string/image_upload"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:id="@+id/finishBtn"
                    style="@style/font_button"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/finish"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/widget_loading" />

</RelativeLayout>